[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
description = "computes the short-time fourier transform on streaming data"
documentation = "https://snd.github.io/stft/stft/index.html"
homepage = "https://github.com/snd/stft"
keywords = ["dsp", "fft", "stream", "data", "fourier"]
license = "MIT OR Apache-2.0"
name = "stft"
readme = "README.md"
repository = "https://github.com/snd/stft.git"
version = "0.3.0"

edition = "2018"

[dependencies]
apodize = "1.0"
num-complex = "0.3"
num-traits = "0.2"
rustfft = "5"
strider = "0.1.3"
